# win-cur

./: README.md  note.txt  setup.cfg
win_cur/: __init__.py  cursor.py  test.py
