[metadata]
name = win-cur
version = 1.0
author = hite4044
long_description = file: README.md # 从文件中读取
license = MPL-2.0
url = https://github.com/hite4044/win-cur
classifiers = # PyPI的分类，类似于标签，所有条目见 https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find: # 自动搜索存在__init__.py的文件夹作为包
